Edit files to be read by GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Tea Cozy</title>
 </head>
 <body>
@@ -27,23 +27,23 @@
             <h4>What's Steeping at The Tea Cozy</h4>
             <div class="container">
                 <div class="tea">
-                    <img src="/imgs/img-berryblitz.webp" alt="Fall Berry Blitz Tea">
+                    <img src="imgs/img-berryblitz.webp" alt="Fall Berry Blitz Tea">
                     <p>Fall Berry Blitz Tea</p>
                 </div>
                 <div class="tea">
-                    <img src="/imgs/img-spiced-rum.webp" alt="Spice Rum Tea">
+                    <img src="imgs/img-spiced-rum.webp" alt="Spice Rum Tea">
                     <p>Spiced Rum Tea</p>
                 </div>
                 <div class="tea">
-                    <img src="/imgs/img-donut.webp" alt="Seasonal Donuts">
+                    <img src="imgs/img-donut.webp" alt="Seasonal Donuts">
                     <p>Seasonal Donuts</p>
                 </div>
                 <div class="tea">
-                    <img src="/imgs/img-myrtle-ave.webp" alt="Myrtle Ave Tea">
+                    <img src="imgs/img-myrtle-ave.webp" alt="Myrtle Ave Tea">
                     <p>Myrtle Ave Tea</p>
                 </div>
                 <div class="tea">
-                    <img src="/imgs/img-bedford-bizarre.webp" alt="Bedford Bizarre Tea">
+                    <img src="imgs/img-bedford-bizarre.webp" alt="Bedford Bizarre Tea">
                     <p>Bedford Bizarre Tea</p>
                 </div>
             </div>
