--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/imgs/img-tea-cozy-logo.webp" alt="Tea Cozy logo">
+        <img src="imgs/img-tea-cozy-logo.webp" alt="Tea Cozy logo">
         <ul>
             <li><a href="#">Mission</a></li>
             <li><a href="#">Featured Tea</a></li>
